*tox-core-9999 (04 Aug 2013)

  04 Aug 2013; Manuel Rüger <mrueg@gentoo.org> +metadata.xml,
  +tox-core-9999.ebuild:
  Initial ebuild